# Web-DISK

./: .env.example  .gitignore  README.md  TODO.md  build.bat  build.sh  docker-compose.example.yaml  pyproject.toml
backend/: README.md  main.py
backend/api/: chat.py  documents.py  graphs.py  knowledge_graph.py  tasks.py
backend/core/: config.py  dependencies.py
backend/db/: migrate.py  neo4j.py  session.py
backend/models/: database.py  schemas.py
backend/services/: embedding.py
backend/tasks/: celery_app.py  document_tasks.py
docs/: multi-agent-design.md
frontend/: index.html  package-lock.json  package.json
frontend-vue/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: GlassCard.tsx
frontend/src/data/: mock.ts
frontend/src/hooks/: index.ts  useSelectedGraph.ts
frontend/src/pages/: ChatView.tsx  DocumentsView.tsx  GraphView.tsx  GraphsView.tsx  HistoryView.tsx  PipelineView.tsx  SearchView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
