[project]
name = "web-disk"
version = "0.1.0"
description = "Web-based Knowledge Graph Construction System"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # core disk_kg
    "disk-kg>=1.0.0",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy>=2.0.36",
    # Celery & Redis
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Neo4j
    "neo4j>=5.26.0",
    # LLM
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.0",
    # Utilities
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "DISK"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
